# Hillel

./: .gitignore  Dockerfile  alembic.ini  app.py  base.db  database_utils.py  docker-compose.yml  pyproject.toml  sendmail.py
Project_utils/: __init__.py  database_utils.py  db_utils.py  models.py  schedule_ulils.py  schedule_utils.py  sendmail.py
Threading/: python_mp.py  python_threading.py
migration/: env.py
migration/versions/: 17f521080a33_create_database.py
templates/: base.html  fitness_center.html  fitness_centers.html  index.html  login.html  rating.html  register.html  reservations.html  services.html  trainer_page.html  trainers.html  user.html
