[tool.poetry]
name = "hillel"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
aiosqlite = "^0.20.0"
pydantic = "^2.7.1"
flask-login = "^0.6.3"
pip = "^24.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.30"
celery = "^5.4.0"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
